# MCPs

./: .gitignore  README.md
chroma/: requirements.txt  run_server.ps1
chroma/src/: __init__.py  add_tool.py  chroma_client.py  embeddings.py  query_tool.py  server.py  tools.py
h2a/src/: config.json  config.py  human2agent.py  logger.py  test_mcp.py  tools.py
h2a_mcp/: .gitignore  h2a.py
h2a_mcp/src/: config.py  prompt_engineering_tool.py  server.py
human_to_agent/: pyproject.toml  run-mcp.ps1  test_mcp_auto.py
human_to_agent/src/: human2agent.py  logger.py  test_mcp.py
human_to_agent/src/config/: __init__.py  config.json
human_to_agent/src/instruction/: planning.md
openrouter/: .gitignore  README.md  config.example.json  models.example.json  package-lock.json  package.json
openrouter/src/: client.ts  config.ts  index.ts  logger.ts
planing/: .env  README.md  directory_tree.md  pyproject.toml  run_server.py  test-mcp.ps1  test_tools_loading.py
planing/src/: __init__.py  config.py  instruction.md  server.py  tool_registry.py
planing/src/tools/: __init__.py  planner.py
planing/src/utils/: __init__.py  logger.py
planing/tests/: __init__.py  run_for_test.py
run_python_code/: __init__.py  main.py  pyproject.toml  requirements.txt  test_tool.py
run_python_code/src/: __init__.py  rewrite_prompt_tool.py  run_python_code_tool.py  server.py  tools.py
sql-server/: .gitignore  README.md  config.example.json  package.json
sql-server/src/: client.ts  config.ts  index.ts  logger.ts
task_evaluation/: agent_evaluator.py
task_evaluation/src/: agent_evaluation_tool.py  error_logger.py  logger.py  server.py  tools.py
telegram/: requirements.txt  test_tool.py
telegram/src/: browser_utils.py  fetch_telegram_channel_tool.py  server.py  tools.py
text/: requirements.txt
text/src/: count_sentences_tool.py  count_tokens_tool.py  (+1 more)
text_utils/: test_tool.py
web_page_crawling/: requirements.txt  test_tool.py
web_pages/: requirements.txt
win/src/: server.py  (+2 more)
win_tools/: test_tool.py
win_tools/powershell/: README.md  pyproject.toml  run_server.ps1  test_powershell_mcp.py
win_tools/powershell/src/: powershell.py  server.py  tools.py
(+31 files in other folders)
